resource-manager: bugfix: structure listener callbacks on resourcelists received no changed resource for subresource added